syntax = "proto3";
package desmos.reactions.v1.client;

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "cosmos_proto/cosmos.proto";

import "desmos/reactions/v1/models.proto";

option go_package = "github.com/desmos-labs/desmos/v4/x/reactions/client/utils";

// SetReactionsParamsJSON contains the data that can be specified when setting a
// subspace reactions params using the CLI command
message SetReactionsParamsJSON {
  // Params related to RegisteredReactionValue reactions
  RegisteredReactionValueParams registered_reaction_params = 1
      [ (gogoproto.nullable) = false ];

  // Params related to FreeTextValue reactions
  FreeTextValueParams free_text_params = 2 [ (gogoproto.nullable) = false ];
}